fixed names and row gap

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -60,6 +60,11 @@
 /* ridimensionamento card main */    
 
 .col {
-     flex-basis: calc(100% / 6 - 5rem /6);  }
+    flex-basis: calc(100% / 6 - 5rem /6);  
+}
+
+.nav-link {
+    gap: 35px;
+}
     
-    }
+}
