--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,14 @@ body{
     color: #fff;
 }
 
+li {
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
+}
+
 /* Utilities */
 .prov-br {
     border: 1px dashed #fff;
@@ -78,7 +86,8 @@ header {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 1rem;
+    column-gap: 1rem;
+    row-gap: 4rem;
 }
 
 .col {
@@ -86,7 +95,7 @@ flex-basis: calc(50% - 1rem /2);
 }
 
 .card {
-height: 300px;;
+min-height: 300px;;
 }
 
 /* ------------SIDEBAR---------- */
